--- a/desafios-guanabara/d12/cordelmoderno.html
+++ b/desafios-guanabara/d12/cordelmoderno.html
@@ -11,11 +11,11 @@
 <header>
     <h1>Cordel Moderno</h1>
 
-    <p>Por<a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
+    <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
 </header>
 
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -27,7 +27,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -39,7 +39,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -61,7 +61,7 @@
       
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -73,7 +73,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
@@ -96,7 +96,7 @@
     </section>
 
 <footer>
-    <p>Site Criado por<a href="https://gustavoguanabara.github.io" target="_blank"> Gustavo Guanabara</a>para o <a href="https://www.cursoemvideo.com" target="_blank">Curso em Video</a></p>
+    <p>Site Criado por <a href="https://gustavoguanabara.github.io" target="_blank"> Gustavo Guanabara </a>para o <a href="https://www.cursoemvideo.com" target="_blank"> Curso em Video</a></p>
 </footer>
 </body>      
 </html>
