--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,15 +12,33 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th {
             border: 1px solid black;
             padding: 10px;
         }
 
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1;
+            background-color: gray;
+        }
+
+        tbody > tr:nth-child(2n) {
+background-color: lightgray;            
         }
 
         .numero {
@@ -34,6 +52,7 @@
     <!--
     ANATOMIA PARA TABELAS GRANDES
     TABLE
+    CAPTION
         THEAD-CABECA
             TR, TD, TH
 
@@ -44,10 +63,11 @@
             TR, TD, TH
     -->
             <table>
+                <caption>População das unidades federativas:</caption>
                 <THead>
                     <tr>
-                        <th>Estado</th>
-                        <th>População</th>
+                        <th scope="col">Estado</th>
+                        <th scope="col" style="width: 90px;">População</th>
                     </tr>
                 </THead>
                 <Tbody>                
@@ -163,7 +183,7 @@
                 </Tbody>
                 <TFoot>
                     <tr>
-                        <th>Total de Habitantes</th>
+                        <th scope="row">Total de Habitantes</th>
                         <td class="numero"><strong>193 393 350</strong></td>
                     </tr>
                 </TFoot>
