--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -15,7 +15,9 @@
 <body>
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat error maiores deleniti quae illo corrupti, ullam dolorem animi recusandae earum consectetur aliquid cupiditate iste impedit nisi explicabo amet est cum.</p>
-    <iframe src="pagina001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="Paginas-extras/pagina001.html" frameborder="0" height="500" width="500">
+        <p class="erro">Infelismente seu navegador não é compativel com isso!</p>
+    </iframe>
     
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste sunt autem eveniet. Rem quisquam hic, saepe quia deserunt voluptatum molestias, voluptas nam delectus doloribus aliquam consectetur quasi eveniet cum voluptatibus.</p>
 </body>
