exercicios com iframes 003

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt earum repellat nemo vitae quos rerum consectetur beatae quasi ipsum obcaecati labore, alias officia quaerat commodi quam reiciendis, cumque omnis cum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio voluptatem incidunt beatae minus facere aliquid reiciendis, voluptatum consectetur eveniet eligendi alias et maiores, in blanditiis. Ad fuga ex sapiente laboriosam.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma opção acima" <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem inventore doloremque iusto fugiat vero, quo illo temporibus ex earum harum tempore aliquid nam voluptatum, voluptate qui debitis culpa similique eveniet.</p> <img src='imagens/favicon.ico'>">
         <p>Infelismente seu navegador não é compativel com isso!</p>      
     </iframe>
 
