--- a/exercicios/ex025/form005.html
+++ b/exercicios/ex025/form005.html
@@ -12,11 +12,11 @@
             <legend>Dados Pessoais</legend>
             <p>
                 <label for="inome">Nome</label>
-                <input type="text" name="nome" id="inome" minlength="5" max="20"required>
+                <input type="text" name="nome" id="inome" minlength="5" max="20"required placeholder="nome e Nobrenome">
             </p>
             <p>
                 <label for="iemail">E-mail</label>
-                <input type="email" name="email" id="iemail" autocomplete="email" required>
+                <input type="email" name="email" id="iemail" autocomplete="email" required placeholder="exemplo@hotmail.com">
             </p>
             <p>
                 <label for="itel">Telefone</label>
