correção de escrita

--- a/exercicios/ex025/form005.html
+++ b/exercicios/ex025/form005.html
@@ -24,7 +24,7 @@
                 <!-- pattern esse ou o de cima mesmo resultado "^\(\d{2}\)\d{4,5}-\d{4}$"-->
             </p>
             <!--Estudar mais sobre RegEx ou espressoes regulares-->
-        </fie.+ldset>
+        </fieldset>
         <p>
          <input type="submit" value="Enviar">
          <input type="reset" value="Limpar">
