--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Responsivo em Midia Query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0&icon_names=menu" />
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
 <h1>Meu Site</h1>
-<menu>
+<i id="burguer" class="material-symbols-outlined" onclick="clickmenu()">
+    menu
+</i>
+<menu id="itens">
     <ul>
         <li><a href="#">Opição 1</a></li>
         <li><a href="#">Opição 2</a></li>
@@ -30,6 +34,15 @@
 
         </article>
     </main>
-    
+    <script>
+        function clickmenu() {
+            if (itens.style.display == 'block') {
+            itens.style.display = 'none' 
+        } 
+        else {
+            itens.style.display  ='block'
+        }
+    }
+    </script>
 </body>
 </html>
