--- a/exercicios/ex028/grid002/index.html
+++ b/exercicios/ex028/grid002/index.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid layout na prática</title>
-    <style>
+    <title></title>
+     <style>
         div.container {
             border:3px solid blue ;
             display: grid;
+           /*---- 
             grid-template-columns: auto auto auto;
-            grid-template-rows: auto auto auto;
+            grid-template-rows: auto auto auto; ----*/ 
+            grid-template: repeat(3,auto) / repeat(3,auto);
             gap:5px;
-            align-items: normal;
-            justify-items: normal;
-            align-content: normal;
-            justify-content: normal;
+            /*---- 
+            align-items: start;
+            justify-items: center;
+            ----*/
+            place-items: start center;
+            /*---
+            align-content: space-between;
+            justify-content: end;
+            ----*/
+            place-content: space-between end;
+
         }
 
         div.item {
@@ -24,7 +33,7 @@
     </style>
 </head>
 <body>
- <div class="container">
+    <div class="container">
     <div class="item">A</div>
     <div class="item">B</div>
     <div class="item">C</div>
