--- a/exercicios/ex028/grid003/index.html
+++ b/exercicios/ex028/grid003/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid layout na prática</title>
-    <style>
+    <title></title>
+     <style>
         div.container {
             border:3px solid blue ;
             display: grid;
-            grid-template-columns: auto auto auto;
-            grid-template-rows: auto auto auto;
-            gap:5px;
-            align-items: normal;
-            justify-items: normal;
-            align-content: normal;
-            justify-content: normal;
+            grid-template-rows: repeat(3, 80px);
+            grid-template-columns: 100px 40% repeat(2, 1fr);
+            grid-auto-flow: row;
+            grid-auto-rows: 80px;
+            grid-auto-columns: 120px;
+            gap: 10px;
+            place-items: normal normal;
+            place-content: normal normal;
         }
 
         div.item {
@@ -24,7 +25,7 @@
     </style>
 </head>
 <body>
- <div class="container">
+    <div class="container">
     <div class="item">A</div>
     <div class="item">B</div>
     <div class="item">C</div>
@@ -32,6 +33,9 @@
     <div class="item">E</div>
     <div class="item">F</div>
     <div class="item">G</div>
+    <div class="item">H</div>
+    <div class="item">I</div>
+    <div class="item">J</div>
  </div>
 </body>
 </html>
